# mybuild

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/ProjectTemplate/: CMakeLists.txt
apps/ProjectTemplate/inc/: ProjectTemplate.h
apps/ProjectTemplate/src/: ProjectTemplate.cpp
xclass/: CMakeLists.txt
xclass/inc/: xclass.h
xclass/src/: xclass.cpp
