cmake_minimum_required(VERSION 3.22)
project("xclass")

set(SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(INCS ${CMAKE_CURRENT_SOURCE_DIR}/inc)

set(SOURCES
	${SRCS}/xclass.cpp
)

set(XCLASS_INCLUDE_DIRECTORIES ${INCS})
set(XCLASS_INCLUDE_DIRECTORIES ${XCLASS_INCLUDE_DIRECTORIES} PARENT_SCOPE)

set(XCLASS_LIBRARY_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
set(XCLASS_LIBRARY_DIRECTORIES ${XCLASS_LIBRARY_DIRECTORIES} PARENT_SCOPE)

set(XCLASS_LIBRARIES ${PROJECT_NAME})
set(XCLASS_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)

# declare a target named ${PROJECT_NAME} with ${SRCS}
# (must be done before setting properties on the target)
add_library(${PROJECT_NAME} STATIC)

target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${XCLASS_INCLUDE_DIRECTORIES} )
set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
